manifests/monitoring/kibana/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
  namespace: monitoring
  labels:
    app: kibana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        # image: kibana:5.1.1
        # image: kibana:5.1.2
        image: kibana:5.2.0
        imagePullPolicy: IfNotPresent
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /etc/kibana
      volumes:
      - name: config
        configMap:
          name: kibana
