manifests/monitoring/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: monitoring
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
    protocol: TCP
    # targetPort: ui
    targetPort: 5601
  selector:
    app: kibana
